--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "@concurrent-world/client": "^2.2.10",
-    "elysia": "latest"
+    "@concurrent-world/client": "^2.2.10"
   },
   "devDependencies": {
     "bun-types": "latest"
