--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch index.ts"
   },
   "dependencies": {
-    "@concurrent-world/client": "^2.2.10"
+    "@concurrent-world/client": "^2.2.10",
+    "cowsay": "^1.5.0"
   },
   "devDependencies": {
     "bun-types": "latest"
